--- a/styleEX.css
+++ b/styleEX.css
@@ -1,24 +1,39 @@
 body
 {
-    background-color: rgb(120, 212, 255);
+    background-color: rgb(165, 227, 255);
 }
 
 img
 {
-    height: 120px;
+    height: 150px;
+    width: 250px;
+    border-radius: 10px;
+}
+
+.Titulo
+{
+    margin: 0 auto;
     width: 200px;
 }
 
 h2
 {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 15px;
+    font-family: Impact, fantasy;
+    font-weight: 100;
 }
 
-article
+section
 {
     margin: 100px;
     background-color: aliceblue;
-    width: 200px;
+    width: 250px;
     border-style: none outset outset none;
-    margin: auto;
+    border-radius: 10px;
+    margin: 0 auto;
+}
+
+p
+{
+    margin: 15px;
 }
